fix markdown textbox overflow sizing

--- a/src/app/shared/forms/planet-markdown-textbox.scss
+++ b/src/app/shared/forms/planet-markdown-textbox.scss
@@ -2,10 +2,9 @@
 
 @mixin editor-border($color) {
   .EasyMDEContainer .editor-toolbar {
-    border-bottom: 1px solid $color;
     border-color: $color;
+    border-bottom: 1px solid $color;
   }
-
   .EasyMDEContainer .CodeMirror {
     border-color: $color;
   }
@@ -20,35 +19,31 @@ planet-markdown-textbox.is-focused:not(.is-invalid) {
 }
 
 planet-markdown-textbox {
+  --planet-markdown-textbox-height: clamp(10rem, 20vh, 13rem);
+
   .CodeMirror {
-    box-sizing: border-box;
-    height: auto;
+    min-height: 0;
   }
 
   .CodeMirror-scroll {
-    max-height: 15vh;
+    max-height: var(--planet-markdown-textbox-height);
     overflow-y: auto !important;
   }
 
-  .CodeMirror.CodeMirror-fullscreen {
-    box-sizing: border-box;
-  }
-
-  .CodeMirror.CodeMirror-fullscreen,
   .CodeMirror-fullscreen .CodeMirror-scroll {
+    height: 100%;
     max-height: 100%;
   }
 
   .editor-statusbar {
-    margin-bottom: -2.75em;
     opacity: 0;
+    margin-bottom: -2.75em;
   }
 
-  .editor-preview,
-  .editor-preview-side {
+  .editor-preview, .editor-preview-side {
     img {
-      max-width: 40vw;
       width: 100%;
+      max-width: 40vw;
     }
   }
 }
@@ -56,7 +51,6 @@ planet-markdown-textbox {
 // EasyMDE fullscreen surfaces need an explicit background after the MDC form migration;
 // otherwise the app chrome shows through the fixed preview/editor layer.
 .EasyMDEContainer .CodeMirror-fullscreen,
-.editor-preview-full,
-.editor-toolbar.fullscreen {
+.editor-preview-full, .editor-toolbar.fullscreen {
   background: white !important;
 }
